--- a/src/css/boxgame.css
+++ b/src/css/boxgame.css
@@ -1,21 +1,16 @@
-.box {
-  align-items: center;
-  display: flex;
-  flex-flow: column;
-  justify-content: center;
-  margin-bottom: 30px;
+
+.info{
+  width: 100%;
 }
 
-.box .info {
+.info {
   align-items: center;
   background: #a82460;
-  /* border: 1px solid #000; */
   border-radius: 10px;
   display: flex;
   justify-content: space-between;
   margin: 0 0 50px;
   padding: 10px 50px;
-  width: 1000px;
 }
 
 .info h4 a {
@@ -30,17 +25,24 @@
   font-size: 30px;
 }
 
-.box .game {
-  border-radius: 5px;
+.game{
+
+}
+
+.game {
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
-  display: flex;
-  flex-flow: column;
-  width: 800px;
-  z-index: 40;
+  border-radius: 5px;
+  height: 520px;
+  padding: 20px;
+  /* display: flex; */
+  /* flex-flow: column; */
+  /* width: 800px; */
+  /* z-index: 40; */
 }
 
 .box .title {
-  padding: 20px;
+  background: #000;
+  /* padding: 20px; */
 }
 
 .title h5 {
@@ -57,9 +59,11 @@
 }
 
 .question {
+  align-items: center;
   display: flex;
   flex-flow: column;
   height: 400px;
+  justify-content: center;
   padding: 0 60px;
 }
 
@@ -81,11 +85,20 @@
   text-align: center;
 }
 
+.options{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin-bottom: 20px;
+  width: 800px;
+}
+
 .box .options {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
   padding: 5px 0 10px;
+  border: 1px solid red;
 }
 
 .options button {
@@ -93,9 +106,10 @@
   border: none;
   border: 1px solid #999;
   border-radius: 5px;
+  flex-wrap: wrap;
   margin: 3px 0;
   padding: 5px;
-  width: 300px;
+  width: 350px;
 }
 
 .options button:hover {
@@ -110,9 +124,17 @@
   padding: 10px 100px;
 }
 
+.answer{
+  align-items: center;
+  display: flex;
+  flex-flow: column;
+  justify-content: center;
+}
+
 .answer button {
   background: #fff;
   border: none;
+  width: 300px;
 }
 
 .answer .active {
@@ -126,9 +148,9 @@
   text-transform: uppercase;
 }
 
-.image img {
-  /* left: -200px; */
+.game img {
+  left: 900px;
   position: relative;
-  /* top: -500px; */
-  width: 600px;
+  top: -150px;
+  width: 100px;
 }
